# ApartmentsDotLloyd

./: .gitignore  DEVELOPMENT_PLAN.md  Makefile  README.md  alewife_dashboard_v2.html  make.ps1
App V1 Dynamic/: LOCAL_VALIDATION.md  RUN_LOCALLY.md  docker-compose.local.yml
App V1 Dynamic/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
App V1 Dynamic/backend/app/: __init__.py  cache.py  config.py  db.py  main.py  models.py  refresh_cli.py  refresh_service.py  scheduler.py  schemas.py  scoring.py
App V1 Dynamic/backend/app/api/: buildings.py  health.py  isochrones.py  refresh.py
App V1 Dynamic/backend/app/routing/: __init__.py  anchors.py  isochrone_service.py  ors_client.py  refresh_all.py  travel_time_service.py
App V1 Dynamic/backend/app/scrapers/: __init__.py  apartments_com.py  base.py  google_places.py  price_service.py  rating_service.py  refresh_all.py
App V1 Dynamic/backend/app/seed/: __init__.py  buildings_seed.json  loader.py  scrape_targets.json
App V1 Dynamic/backend/scripts/: extract_seed.py  inspect_db.py
App V1 Dynamic/backend/tests/: conftest.py  test_apartments_parser.py  test_buildings_api.py  test_buildings_snapshot_overlay.py  test_cache.py  test_extract_seed.py  test_freshness_header.py  test_frontend_browser.py  test_frontend_serving.py  test_google_places_parser.py  test_health.py  test_isochrones_api.py  test_ors_client.py  test_price_service.py  test_rating_service.py  test_refresh_endpoint.py  test_refresh_service.py  test_routing_services.py  test_scheduler.py  test_scoring.py  test_scrape_targets_merge.py  test_seed_loader.py
App V1 Dynamic/backend/tests/e2e/: __init__.py  test_smoke.py
App V1 Dynamic/backend/tests/fixtures/ors/: isochrones_driving_car.json  isochrones_foot_walking.json  matrix_driving_car.json  matrix_foot_walking.json
App V1 Dynamic/backend/tests/fixtures/scrapers/: apartments_no_data.html  apartments_summary_only.html  apartments_with_grid.html  apartments_with_json_ld.html  google_aria_rating.html  google_json_rating.html  google_none.html
Static Dashboard References/: alewife_dashboard.html
(+9 files in other folders)
