[project]
name = "alewife-backend"
version = "0.1.0"
description = "Backend for the Alewife Apartment Intelligence Dashboard"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jonathan Lloyd" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlmodel>=0.0.22",
  "httpx>=0.28",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.19",
]

[project.optional-dependencies]
scraping = [
  # Playwright's Python package and the bundled Chromium in the Docker
  # image must match exactly. Upgrade in lockstep with the `FROM` tag in
  # backend/Dockerfile (currently v1.58.0-noble) or `chromium.launch()`
  # will fail with "Executable doesn't exist at /ms-playwright/...".
  "playwright==1.58.0",
  "selectolax>=0.3.28",
  "beautifulsoup4>=4.12",
]
scheduling = [
  "apscheduler>=3.10",
  "cachetools>=5.5",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.35",
  "ruff>=0.8",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["cachetools.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]
